[package]
name = "pilot_macro"
version = "0.1.0"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2018"
repository = "https://gitlab.com/pilot-automation/nexus/pilot_macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.11", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0.13", default-features = false }
lazy_static = "1.2.0"
itertools = "0.9.0"
regex = "1.3.7"
pilot_sys = { git = "https://gitlab.com/pilot-automation/nexus/pilot_sys" }
