[package]
name = "pilot_macro"
version = "0.3.0"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2021"
repository = "https://github.com/pilotnexus/pilot_macro.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
quote = "1.0.15"
proc-macro2 = { version = "1.0.36", default-features = false }
lazy_static = "1.4.0"
itertools = "0.10.3"
regex = "1.5.4"
pilot_sys = { git = "https://github.com/pilotnexus/pilot_sys.git" }
